<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.InfoFragment">

    <ImageView
        android:id="@+id/imagemDetalhe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tam_250"
        android:scaleType="fitXY"
        android:src="@drawable/beatles2"
        android:contentDescription="@string/descricao_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvnomeBanda" />

    <TextView
        android:id="@+id/tvnomeBanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/beatles"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvInfo"
        app:layout_constraintTop_toBottomOf="@id/imagemDetalhe" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/descricao_banda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvnomeBanda" />

</androidx.constraintlayout.widget.ConstraintLayout>